# regtura

./: CONTRIBUTING.md  README.md  ROADMAP.MD  pyproject.toml
frontend/src/: App.jsx
regtura/src/regtura/validate/: __init__.py  history.py
regtura/src/regtura/validate/rule_engine/: engine.py
regtura/src/regtura/validate/taxonomies/finrep/: f0101_rules.py
regtura/tests/sample_data/: finrep_sample_failing.json  finrep_sample_valid.json
regtura/tests/validate/: test_f0101_rules.py
regtura/{src/regtura/: api.py
src/regtura/: __init__.py  cli.py
src/regtura/common/: __init__.py
src/regtura/validate/: excel_parser.py
src/regtura/validate/taxonomies/finrep/: taxonomy.py
